Scrollbar issue fixed, ZenGuard-1.0.1.0-RELEASE, double redirect issues fixed.

--- a/src/page-component/download/CheckOut/checkout.css
+++ b/src/page-component/download/CheckOut/checkout.css
@@ -1,3 +1,6 @@
+html {
+  scrollbar-gutter: stable;
+}
 
 #mainBody-checkout {
   position: fixed;
